// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`titresONF teste la récupération des données pour l'ONF 1`] = `
Object {
  "dateCARM": "",
  "dateCompletudePTMG": "2022-03-10",
  "dateReceptionONF": "",
  "enAttenteDeONF": true,
  "id": Any<String>,
  "nom": "titre1",
  "references": Array [
    Object {
      "nom": "ONF",
      "titreId": Any<String>,
      "type": Object {
        "id": "onf",
        "nom": "ONF",
      },
      "typeId": "onf",
    },
  ],
  "slug": Any<String>,
  "statut": Object {
    "couleur": "success",
    "description": "Titres et autorisations sur lesquels peuvent être mis en oeuvre un projet minier, à compter de la date d'octroi et jusqu’à l’échéance fixée. Le domaine minier est fermé pour les substances et usages visés.",
    "id": "val",
    "nom": "valide",
    "ordre": 3,
  },
  "titulaires": Array [
    Object {
      "nom": "Mon Entreprise",
    },
  ],
}
`;

exports[`titresONF teste la récupération des données pour l'ONF 2`] = `
Object {
  "dateCARM": "",
  "dateCompletudePTMG": "",
  "dateReceptionONF": "",
  "enAttenteDeONF": false,
  "id": Any<String>,
  "nom": "titre2",
  "references": Array [
    Object {
      "nom": "ONF",
      "titreId": Any<String>,
      "type": Object {
        "id": "onf",
        "nom": "ONF",
      },
      "typeId": "onf",
    },
  ],
  "slug": Any<String>,
  "statut": Object {
    "couleur": "success",
    "description": "Titres et autorisations sur lesquels peuvent être mis en oeuvre un projet minier, à compter de la date d'octroi et jusqu’à l’échéance fixée. Le domaine minier est fermé pour les substances et usages visés.",
    "id": "val",
    "nom": "valide",
    "ordre": 3,
  },
  "titulaires": Array [
    Object {
      "nom": "Mon Entreprise",
    },
  ],
}
`;

exports[`titresPTMG teste la récupération des données pour le PTMG 1`] = `
Object {
  "enAttenteDePTMG": false,
  "id": Any<String>,
  "nom": "titre1",
  "references": Array [
    Object {
      "nom": "ONF",
      "titreId": Any<String>,
      "type": Object {
        "id": "onf",
        "nom": "ONF",
      },
      "typeId": "onf",
    },
  ],
  "slug": Any<String>,
  "statut": Object {
    "couleur": "success",
    "description": "Titres et autorisations sur lesquels peuvent être mis en oeuvre un projet minier, à compter de la date d'octroi et jusqu’à l’échéance fixée. Le domaine minier est fermé pour les substances et usages visés.",
    "id": "val",
    "nom": "valide",
    "ordre": 3,
  },
  "titulaires": Array [
    Object {
      "nom": "Mon Entreprise",
    },
  ],
}
`;

exports[`titresPTMG teste la récupération des données pour le PTMG 2`] = `
Object {
  "enAttenteDePTMG": true,
  "id": Any<String>,
  "nom": "titre2",
  "references": Array [
    Object {
      "nom": "ONF",
      "titreId": Any<String>,
      "type": Object {
        "id": "onf",
        "nom": "ONF",
      },
      "typeId": "onf",
    },
  ],
  "slug": Any<String>,
  "statut": Object {
    "couleur": "success",
    "description": "Titres et autorisations sur lesquels peuvent être mis en oeuvre un projet minier, à compter de la date d'octroi et jusqu’à l’échéance fixée. Le domaine minier est fermé pour les substances et usages visés.",
    "id": "val",
    "nom": "valide",
    "ordre": 3,
  },
  "titulaires": Array [
    Object {
      "nom": "Mon Entreprise",
    },
  ],
}
`;
